--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Arman Ali",
+  "author": "Shivam Batham",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
